force-app/main/default/objects/Case_Status_Change__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Status Time (in days, hrs, mins, secs)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>