force-app/main/default/objects/Case_Status_Change__c/fields/Change_Time__c.field-meta.xml
<CustomField>
    <fullName>Change_Time__c</fullName>
    <label>Status End Time</label>
    <type>DateTime</type>
</CustomField>