force-app/main/default/objects/Case_Status_Change__c/fields/Status_From__c.field-meta.xml
<CustomField>
    <fullName>Status_From__c</fullName>
    <label>Status Changed From</label>
    <length>40</length>
    <type>Text</type>
</CustomField>