force-app/main/default/objects/Case_Status_Change__c/fields/Status_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Time__c</fullName>
    <label>Status Time (numeric hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>