force-app/main/default/objects/Case_Status_Change__c/fields/Time_in_status__c.field-meta.xml
<CustomField>
    <fullName>Time_in_status__c</fullName>
    <description>Time spent in status</description>
    <formula>IF( ISBLANK(Change_Time__c),
TEXT( FLOOR( NOW() - Set_Time__c ) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( (NOW() - Set_Time__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (NOW() - Set_Time__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
Age__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How long time has the case been in the status</inlineHelpText>
    <label>Time in status</label>
    <type>Text</type>
</CustomField>