force-app/main/default/objects/Case_Status_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Current_Case_Owner__c</columns>
    <columns>Set_Time__c</columns>
    <columns>Change_Time__c</columns>
    <columns>Status_From__c</columns>
    <columns>Status_Name__c</columns>
    <columns>Status_Time__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>